Fix headings font Singapour

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -479,7 +479,7 @@ html {
     margin: auto 3%;
   }
   &__title {
-    font-family: "pix";
+    font-family: "MS-Sans-Serif-8pt-Bold";
     font-size: 33px;
     margin-top: 54px;
     margin-bottom: 33px;
@@ -487,7 +487,7 @@ html {
   &__h3 {
     font-size: 24px;
     margin-top: 54px;
-    font-family: "pix";
+    font-family: "MS-Sans-Serif-8pt-Bold";
     line-height: 1.2;
   }
   &__folder {
