--- a/src/styles/components/_singapour.scss
+++ b/src/styles/components/_singapour.scss
@@ -1,161 +1,161 @@
 @font-face {
-    font-family: "pix";
-    src:
-        url("../assets/fonts/singapour/pixM8pt.ttf");
+  font-family: "pix";
+  src: url("../assets/fonts/singapour/pixM8pt.ttf");
+}
+@font-face {
+  font-family: "w9";
+  src: url("../assets/fonts/singapour/W95FA.otf");
+}
+@font-face {
+  font-family: "MS-Sans-Serif-8pt-Bold";
+  src: url("../../assets/fonts/MS-Sans-Serif-8pt-bold.ttf");
+}
+
+.singapour {
+  padding: 5rem 33px;
+  position: relative;
+
+  &__modal {
+    background-color: #fafafa;
+    z-index: 5;
+    border: 3px solid #c0c0c0;
+    border-top: none;
   }
-  @font-face {
+
+  &__navbar {
+    display: flex;
+    background-color: #000080;
+    padding: 3px;
+    height: 25px;
+    border: 2px solid #c0c0c0;
+    position: relative; // ajout
+  }
+  &__txt {
     font-family: "w9";
-    src:
-        url("../assets/fonts/singapour/W95FA.otf");
+
+    &--bottom {
+      padding-bottom: 74px;
+    }
+
+    &--nav {
+      font-size: 20px;
+      color: #fafafa;
+      line-height: 0%;
+      margin-top: 12px;
+    }
   }
-  
-  
+  &_notepad {
+    width: 20px;
+    height: 20px;
+    margin-top: 0px;
+  }
+  &__icons {
+    width: 80px; // ajout
+    display: flex;
+    justify-content: space-around;
+    position: absolute; // ajout
+    right: 5px; // ajout
+  }
+  &__icon {
+    margin-top: 3px;
+    width: 20px;
+    height: 20px;
+  }
+  &__content {
+    max-width: 94%;
+    margin: auto 3%;
+  }
+  &__title {
+    font-family: "MS-Sans-Serif-8pt-Bold";
+    font-size: 33px;
+    margin-top: 54px;
+    margin-bottom: 33px;
+  }
+  &__h3 {
+    font-size: 24px;
+    margin-top: 54px;
+    font-family: "MS-Sans-Serif-8pt-Bold";
+    line-height: 1.2;
+  }
+  &__folder {
+    position: absolute;
+    bottom: 200px;
+    left: 40%;
+  }
+  &__grab {
+    display: none;
+    z-index: -1;
+    padding: 5px;
+    border: 0.5px solid #fafafa;
+  }
+  &__bin {
+    position: absolute;
+    bottom: 200px;
+    left: 10%;
+  }
+  &__paint {
+    position: absolute;
+    bottom: 200px;
+    right: 15%;
+  }
+}
+
+@media (min-width: 481px) {
   .singapour {
-    padding: 5rem 33px;
-    position: relative; 
-  
     &__modal {
-      background-color: #fafafa;
-      z-index: 5;
-      border: 3px solid #C0C0C0;
-      border-top: none;
+      max-width: 80%;
+      justify-content: center;
     }
-  
-    &__navbar {
-      display: flex;
-      background-color: #000080;
-      padding: 3px;
-      height: 25px;
-      border: 2px solid #C0C0C0;
-      position: relative; // ajout
+  }
+}
+
+@media (min-width: 560px) {
+  .singapour {
+    &__grab {
+      display: block;
+      z-index: 2;
     }
-    &__txt {
-      font-family: "w9";
-  
-      &--bottom {
-        padding-bottom: 74px;
-      }
-  
-      &--nav {
-        font-size: 20px;
-        color: #fafafa;
-        line-height: 0%;
-        margin-top: 12px;
-      }
-    }
-    &_notepad {
-      width: 20px;
-      height: 20px;
-      margin-top: 0px;
-    }
-    &__icons {
-      width: 80px; // ajout
-      display: flex;
-      justify-content: space-around;
-      position: absolute; // ajout
-      right: 5px; // ajout
-    }
-    &__icon {
-      margin-top: 3px;
-      width: 20px;
-      height: 20px;
-    }
-    &__content {
-      max-width: 94%;
-      margin: auto 3%;
+  }
+}
+
+@media (min-width: 769px) {
+  .singapour {
+    &__h3 {
+      font-size: $h3-tablet;
     }
     &__title {
-      font-family: "pix";
-      font-size: 33px;
-      margin-top: 54px;
-      margin-bottom: 33px;
+      font-size: $h2-tablet;
     }
+    &__txt {
+      font-size: $p-tablet;
+    }
+    &__modal {
+      max-width: 60%;
+    }
+  }
+}
+
+@media (min-width: 1025px) {
+  .singapour {
     &__h3 {
-      font-size: 24px;
-      margin-top: 54px;
-      font-family: "pix";
-      line-height: 1.2;
+      font-size: $h3-desktop;
     }
-    &__folder {
-      position: absolute;
-      bottom: 200px;
-      left: 40%;
-    }  
-    &__grab {
-      display: none;
-      z-index: -1;
-      padding: 5px;
-      border: 0.5px solid #fafafa;
+    &__title {
+      font-size: 100px;
     }
-    &__bin {
-      position: absolute;
-      bottom: 200px;
-      left: 10%;
+    &__txt {
+      font-size: $p-desktop;
+    }
+    &__modal {
+      max-width: 80%;
+    }
+    &__folder,
+    &__bin,
+    &__pait {
+      bottom: 50px;
     }
     &__paint {
-      position: absolute;
-      bottom: 200px;
-      right: 15%;
-    }
-    
-  }
-  
-  @media (min-width: 481px) {
-      .singapour {
-        &__modal {
-          max-width: 80%;
-          justify-content: center
-        }
-      }
-  }
-  
-  @media (min-width: 560px) {
-    .singapour {
-      &__grab {
-        display: block;
-        z-index: 2;
-      }
+      bottom: 50px;
     }
   }
-  
-  @media (min-width: 769px) {
-    .singapour {
-      &__h3 {
-        font-size: $h3-tablet;
-      }
-      &__title {
-        font-size: $h2-tablet;
-      }
-      &__txt {
-        font-size: $p-tablet;
-      }
-      &__modal {
-        max-width: 60%;
-      }
-    }
-  }
-  
-  @media (min-width: 1025px) {
-    .singapour {
-      &__h3 {
-        font-size: $h3-desktop;
-      }
-      &__title {
-        font-size: 100px;
-      }
-      &__txt {
-        font-size: $p-desktop;
-      }
-      &__modal {
-        max-width: 80%;
-      }
-      &__folder,
-      &__bin, 
-      &__pait {
-        bottom: 50px
-      }
-      &__paint {
-        bottom: 50px;
-      }
-    }
-  }
+}
